update labels and initalLoad lists

--- a/app/departments-page/webapp/manifest.json
+++ b/app/departments-page/webapp/manifest.json
@@ -103,6 +103,7 @@
             "settings": {
               "contextPath": "/Departments",
               "variantManagement": "Page",
+              "initialLoad": true,
               "navigation": {
                 "Departments": {
                   "detail": {
