--- a/app/positions-page/webapp/manifest.json
+++ b/app/positions-page/webapp/manifest.json
@@ -103,6 +103,7 @@
             "settings": {
               "contextPath": "/Positions",
               "variantManagement": "Page",
+              "initialLoad": true,
               "navigation": {
                 "Positions": {
                   "detail": {
