--- a/app/spacefarers-page/webapp/manifest.json
+++ b/app/spacefarers-page/webapp/manifest.json
@@ -117,6 +117,7 @@
             "settings": {
               "contextPath": "/Spacefarers",
               "variantManagement": "Page",
+              "initialLoad": true,
               "navigation": {
                 "Spacefarers": {
                   "detail": {
